fix: require complete suite metrics